# Aether

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_db.sql  pyproject.toml  requirements.txt
Aether_v1/: process_transactions.py
Aether_v1/config/: __init__.py  settings.py
Aether_v1/constants/: banks_properties.py  dates.py  formats.py  views_icons.py
Aether_v1/controllers/: __init__.py  add_transaction_controller.py  analysis_controller.py  base_controller.py  budget_controller.py  cards_view_controller.py  cash_transaction_controller.py  categories_config_controller.py  data_view_controller.py  goals_controller.py  home_controller.py  logs_controller.py  profile_config_contoller.py  transaction_processor.py  transaction_processor_controller.py  upload_statements_controller.py  user_configuration_controller.py
Aether_v1/core/: __init__.py  abstract_base.py  new_abstract_base.py
Aether_v1/data/: bank.csv  budget.csv  card.csv  category.csv  document.csv  financialgoal.csv  transaction.csv  user.csv
Aether_v1/database/: aether.db
Aether_v1/documents/outputs/: transactions_Nu_ene.csv
Aether_v1/frontend/: app.py
Aether_v1/frontend/components/: __init__.py  add_user.py  add_user_popup.py  cash_transaction.py  config_goals_templates.py  confirm_upload.py  edit_transaction.py  modify_profile_popup.py  modify_template.py  modify_transaction_template.py  new_budget.py  new_card.py  new_category.py  new_goal.py  new_transaction_template.py  period_select_box.py
Aether_v1/frontend/functions/: bank_processor.py  calculations.py  donut_chart.py  pattern.py  plotting.py  process.py  tips.py
Aether_v1/frontend/views/: add_transaction.py  add_user.py  budget.py  cards.py  cash_transaction.py  confirm_upload.py  data.py  expenses_analysis.py  goals.py  home.py  income_analysis.py  logs.py  profile_config.py  transaction_processor.py  upload_files.py  users_config.py
Aether_v1/models/: __init__.py  amounts.py  bank_detector.py  bank_properties.py  bbva_credit.py  bbva_debit.py  cards.py  categories.py  configs.py  dates.py  delimitations.py  document_reader.py  financial.py  goals.py  nu_bank.py  nu_bank_debit.py  properties_catalog.py  propertys_catalog.py  records.py  row_segmenter.py  table_boundary_detector.py  table_normalizer.py  table_reconstructor.py  tables.py  templates.py  test_models.ipynb  transactions.py  users.py  views_data.py
Aether_v1/models/Inbursa/: __init__.py  inbursa_credit.py  inbursa_debit.py
Aether_v1/models/_core/: __init__.py  interfaces.py
Aether_v1/models/amex/: __init__.py  amex_credit.py
Aether_v1/models/banorte/: __init__.py  banorte_credit.py  banorte_debit.py
Aether_v1/models/bbva/: __init__.py  bbva_credit.py  bbva_debit.py
Aether_v1/models/citibanamex/: __init__.py  citibanamex_credit.py
Aether_v1/models/core/: __init__.py  interfaces.py
Aether_v1/models/data_processing/: __init__.py  facade.py  metadata_extraction.py  special_data_filtering.py  table_normalzation.py
Aether_v1/models/document_processing/: __init__.py  banks_properties.py  document_analysis.py  document_reading.py  facade.py  text_processing.py
Aether_v1/models/general/: __init__.py  credit.py
Aether_v1/models/hsbc/: __init__.py  hsbc_credit.py
Aether_v1/models/nu/: __init__.py  nu_bank.py  nu_bank_debit.py
Aether_v1/models/santander/: __init__.py  santander_credit.py  santander_debit.py
Aether_v1/new_model/: bank_detector.py  data_exporter.py  document_reader.py  properties_catalog.py  propertys_catalog.py  row_segmenter.py  table_boundary_detector.py  table_normalizer.py  table_reconstructor.py  test_models.ipynb
Aether_v1/services/: __init__.py  automatic_categorization_service.py  connection_management_service.py  data_processing_service.py  data_validation_service.py  database_service.py  duplicate_treatment_service.py  financial_analysis_service.py  plotting_service.py  transaction_extraction_service.py  user_session_service.py
Aether_v1/tests/: conftest.py  test_models.ipynb
Aether_v1/utils/: __init__.py  helper_functions.py  tablemanager.py
config/: __init__.py  settings.py
models/: __init__.py  document_reader.py  nu_bank.py
scripts/: process_transactions.py
(+95 files in other folders)
