[project]
name = "aether-statement-processor"
version = "0.1.0"
description = "An application to process and analyze bank statements from PDF files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mario", email = "mario.cz24@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Streamlit",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
]

# Production dependencies: required for the application to run.
dependencies = [
    "streamlit==1.51.0",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "pdfplumber==0.11.6",
    "scikit-learn==1.6.1",
    "pydantic==2.9.2",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "passlib[argon2] == 1.7.4",
    "openai==2.14.0"
]

[project.optional-dependencies]
dev = [
    "poe-the-poet>=0.24.0", # Task runner
    "basedpyright==1.36.1",
    "ruff==0.14.9"
]
test = [
    "pytest>=7.0.0",         # Testing framework
]

[tool.poe.tasks]
# run-tests = "pytest -v --tb=short Aether_v1/tests"
run-app = { cmd = "streamlit run frontend/app.py", cwd = "Aether_v1" }

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
